--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content='width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes'>
-    <title>Unity WebGL Player | My project</title>
+    <title>Unity WebGL Player | HoloCenter AR 3.0</title>
     <link rel="stylesheet" href="TemplateData/style.css">
 
     <style>
@@ -62,7 +62,7 @@
     </div>
     <script src="arcamera.js" type="text/javascript"></script>
     <script src="wtracker.js" type="text/javascript"></script>
-    <script src="Build/Test6.loader.js"></script>
+    <script src="Build/test10.loader.js"></script>
     <script>
         var initialize = async() =>{
             var unityCanvas = document.querySelector("#unity-canvas");
@@ -96,12 +96,12 @@
             
             document.getElementById('startARDiv').style.display = 'none';
             createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/Test6.data.br",
-                    frameworkUrl: "Build/Test6.framework.js.br",
-                    codeUrl: "Build/Test6.wasm.br",
+                    dataUrl: "Build/test10.data.br",
+                    frameworkUrl: "Build/test10.framework.js.br",
+                    codeUrl: "Build/test10.wasm.br",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
-                    productName: "My project",
+                    productName: "HoloCenter AR 3.0",
                     productVersion: "1.0.0",
                     //webglContextAttributes: { "preserveDrawingBuffer": true },
                     // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
