--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <script src="arcamera.js" type="text/javascript"></script>
     <script src="wtracker.js" type="text/javascript"></script>
-    <script src="Build/test10.loader.js"></script>
+    <script src="Build/HoloCenter.loader.js"></script>
     <script>
         var initialize = async() =>{
             var unityCanvas = document.querySelector("#unity-canvas");
@@ -96,9 +96,9 @@
             
             document.getElementById('startARDiv').style.display = 'none';
             createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/test10.data.br",
-                    frameworkUrl: "Build/test10.framework.js.br",
-                    codeUrl: "Build/test10.wasm.br",
+                    dataUrl: "Build/HoloCenter.data.br",
+                    frameworkUrl: "Build/HoloCenter.framework.js.br",
+                    codeUrl: "Build/HoloCenter.wasm.br",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
                     productName: "HoloCenter AR 3.0",
