--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             
             document.getElementById('startARDiv').style.display = 'none';
             createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/HoloCenter.data.gz",
-                    frameworkUrl: "Build/HoloCenter.framework.js.gz",
-                    codeUrl: "Build/HoloCenter.wasm.gz",
+                    dataUrl: "Build/HoloCenter.data",
+                    frameworkUrl: "Build/HoloCenter.framework.js",
+                    codeUrl: "Build/HoloCenter.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "Valholo",
                     productName: "HoloCenter AR 3.0",
