--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
         const buildUrl = "Build";
         const loaderUrl = buildUrl + "/HoloCenter.loader.js";
         const config = {
-            dataUrl: buildUrl + "/HoloCenter.data",
-            frameworkUrl: buildUrl + "/HoloCenter.framework.js",
-            codeUrl: buildUrl + "/HoloCenter.wasm",
+            dataUrl: buildUrl + "/HoloCenter.data.gz",
+            frameworkUrl: buildUrl + "/HoloCenter.framework.js.gz",
+            codeUrl: buildUrl + "/HoloCenter.wasm.gz",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Valholo",
             productName: "HoloCenter_V4",
