--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
         const buildUrl = "Build";
         const loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
         const config = {
-            dataUrl: buildUrl + "/a602c953f0ddd6c40bd1c56f79221afc.data.br",
-            frameworkUrl: buildUrl + "/fc2d37634d758b3944f1a730f82768a5.framework.js.br",
-            codeUrl: buildUrl + "/131887c98f28fedc024f8b75354eee0b.wasm.br",
+            dataUrl: buildUrl + "/22588a843151e550503de8243e95e407.data",
+            frameworkUrl: buildUrl + "/fc2d37634d758b3944f1a730f82768a5.framework.js",
+            codeUrl: buildUrl + "/131887c98f28fedc024f8b75354eee0b.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Valholo",
             productName: "HoloCenter_V4",
