--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
         const buildUrl = "Build";
         const loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
         const config = {
-            dataUrl: buildUrl + "/22588a843151e550503de8243e95e407.data",
-            frameworkUrl: buildUrl + "/fc2d37634d758b3944f1a730f82768a5.framework.js",
-            codeUrl: buildUrl + "/131887c98f28fedc024f8b75354eee0b.wasm",
+            dataUrl: buildUrl + "/2d1a9a26d32de0bbafaca59efd21e65e.data.br",
+            frameworkUrl: buildUrl + "/d1ab53808dc84a12aeb7b4a78efdd50e.framework.js.br",
+            codeUrl: buildUrl + "/50ac33f20ac8b2673850bd1200f167ae.wasm.br",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Valholo",
             productName: "HoloCenter_V4",
