--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
 		<imagetarget id='bfly' src='targets/bfly.png'></imagetarget>
 		<imagetarget id='flower' src='targets/flower.png'></imagetarget>
 		<imagetarget id='lady' src='targets/lady.png'></imagetarget>
-		<imagetarget id='cube' src='targets/facePainting.jpg'></imagetarget>
-		<imagetarget id='cap' src='targets/gaga.jpg'></imagetarget>
-		<imagetarget id='pinky' src='targets/Lkgbox.jpg'></imagetarget>
-		<imagetarget id='bunnybug_Lev1' src='targets/face.jpg'></imagetarget>
+		<imagetarget id='cube' src='targets/cube.jpg'></imagetarget>
+		<imagetarget id='cap' src='targets/cap.jpg'></imagetarget>
+		<imagetarget id='pinky' src='targets/pinky.jpg'></imagetarget>
+		<imagetarget id='bunnybug_Lev1' src='targets/bunnybug_Lev1.jpg'></imagetarget>
+		<imagetarget id='bunnybug_Lev1' src='targets/bunnybug_Lev1.jpg'></imagetarget>
+		<imagetarget id='cap' src='targets/cap.jpg'></imagetarget>
+		<imagetarget id='cube' src='targets/cube.jpg'></imagetarget>
+		<imagetarget id='pinky' src='targets/pinky.jpg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <!-- <video id="webcam-video" muted autoplay playsinline style="width:100%; height:100%; object-fit:cover; position:absolute"></video> -->
