--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
     <div id="startARDiv" class="ctaDiv">
         <!--<select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select> -->
-        <p style="text-align: center; width:80vw; font-size:120%; color: rgba(156, 95, 248, 0.849);">Created by Jake Adams @Valholo & Jon McCarthy. <br> <strong>This AR experience requires access to your device's camera </strong></p>
-        <button id="startARButton" onclick="StartAR()" style="display-box; color:rgb(16, 12, 37)"><strong>ALLOW ACCESS</strong></button>
+        <p style="text-align: center; width:80vw; font-size:120%; color: rgba(156, 95, 248, 0.849);">Created by Jake Adams @Valholo & Jon McCarthy. <br> <strong>This AR experience requires access to your device's camera. </strong></p><br>
+        <button id="startARButton" onclick="StartAR()" style= "background-color:plum;border-color:hotpink;display:box;color:rgb(43,17,173)"><strong>ALLOW ACCESS</strong></button>
     </div>
     <div id="screenshotDiv" style="display: none;" class="ctaDiv">
         <div style="position:relative; background-color:rgb(255, 255, 255); padding:10px; box-shadow: 0 4px 8px 0 rgba(106, 34, 213, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.25);">
