--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
     <div id="startARDiv" class="ctaDiv">
         <!--<select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select> -->
-        <p style="text-align: center; width:60vw; font-size:120%; color: rgba(156, 95, 248, 0.849);">Created by Jake Adams @Valholo & Jon McCarthy. <br> <strong>This AR experience requires access to your device's camera. </strong></p><br>
+        <p style="text-align: center; width:60vw; font-size:120%;color: rgb(165, 64, 232)">Created for the HoloCenter by,<br><br><strong>Jake Adams</strong> //@valholo <br>---<br> <strong>Jon McCarthy</strong> //@dudemanbrosun. <br><br>This AR experience requires access to your device's camera.</p><br>
         <button id="startARButton" onclick="StartAR()" style= "background-color:plum;border-color:hotpink;display:box;color:rgb(43,17,173)"><strong>ALLOW ACCESS</strong></button>
     </div>
     <div id="screenshotDiv" style="display: none;" class="ctaDiv">
