--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 		<imagetarget id='cube' src='targets/cube.jpg'></imagetarget>
 		<imagetarget id='cap' src='targets/cap.jpg'></imagetarget>
 		<imagetarget id='pinky' src='targets/pinky.jpg'></imagetarget>
-		<imagetarget id='bunnybug_Lev1' src='targets/bunnybug_Lev1.jpg'></imagetarget>
+		<imagetarget id='RenderedImage' src='targets/RenderedImage.jpg'></imagetarget>
+		<imagetarget id='Himage' src='targets/Himage.jpg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <!-- <video id="webcam-video" muted autoplay playsinline style="width:100%; height:100%; object-fit:cover; position:absolute"></video> -->
