second pass, false prior

--- a/index.html
+++ b/index.html
@@ -34,15 +34,9 @@
 </head>
 <body>
     <!--IMAGETARGETS-->
-		<imagetarget id='bear' src='targets/bear.png'></imagetarget>
-		<imagetarget id='bfly' src='targets/bfly.png'></imagetarget>
-		<imagetarget id='flower' src='targets/flower.png'></imagetarget>
-		<imagetarget id='lady' src='targets/lady.png'></imagetarget>
-		<imagetarget id='cube' src='targets/cube.jpg'></imagetarget>
-		<imagetarget id='cap' src='targets/cap.jpg'></imagetarget>
-		<imagetarget id='pinky' src='targets/pinky.jpg'></imagetarget>
-		<imagetarget id='RenderedImage' src='targets/RenderedImage.jpg'></imagetarget>
-		<imagetarget id='Himage' src='targets/Himage.jpg'></imagetarget>
+		<imagetarget id='Holo' src='targets/Holo.jpg'></imagetarget>
+		<imagetarget id='LumEqu' src='targets/LumEqu.jpg'></imagetarget>
+		<imagetarget id='NormEqu' src='targets/NormEqu.jpg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <!-- <video id="webcam-video" muted autoplay playsinline style="width:100%; height:100%; object-fit:cover; position:absolute"></video> -->
