--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 </head>
 <body>
     <!--IMAGETARGETS-->
-		<imagetarget id='Holo' src='targets/Holo.jpg'></imagetarget>
-		<imagetarget id='LumEqu' src='targets/LumEqu.jpg'></imagetarget>
-		<imagetarget id='NormEqu' src='targets/NormEqu.jpg'></imagetarget>
+		<imagetarget id='Graphe' src='targets/Graphe.jpg'></imagetarget>
+		<imagetarget id='holo2' src='targets/holo2.jpg'></imagetarget>
+		<imagetarget id='LumEqu2' src='targets/LumEqu2.jpg'></imagetarget>
+		<imagetarget id='NormEqu2' src='targets/NormEqu2.jpg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <!-- <video id="webcam-video" muted autoplay playsinline style="width:100%; height:100%; object-fit:cover; position:absolute"></video> -->
